# Race-to-Mars

./: .clang-format  .cppcheck  .gitignore  .oclint  .travis.cache  .travis.yml  CMakeLists.txt  Launch 4 Clients [Release].bat  Launch 4 Clients and Server [Release].bat  Launch 4 Clients and Server.bat  Launch 4 Clients.bat  README.md  Run Code Checker.bat  bash.exe.stackdump
Documentation/: Gameplay Video.url  Trello.url  UML_Diagrams_RaceToSpace.xml
RTS_Launcher/: Form1.Designer.cs  Form1.cs  Program.cs  RTS_Launcher.csproj  RTS_Launcher.sln  packages.config
RTS_Launcher/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Settings.Designer.cs
cmake/: client.cmake  gamelib.cmake  server.cmake
cmake/libs/: asge.cmake  enetpp.cmake  json.cmake  soloud.cmake
cmake/tools/: astyle.cmake  cargo.cmake  clang.format.cmake  itch.io.cmake  python.cmake
data/client/: README.md
data/client/CONFIGS/: cards.json  deck.txt  game_core.json  item_cards.json  itemcards.json  localisation.json  players.json  ship_config.json  ship_rooms.json
data/server/: test.txt
src/: CMakeLists.txt
src/client/: AnimatedSprite.cpp  AnimatedSprite.h  game.cpp  game.h  main.cpp
src/client/Actions/: Action.h  RollDiceAction.cpp  RollDiceAction.h
src/client/Board/: GameBoard.cpp  GameBoard.h  ItemDeck.cpp  ItemDeck.h  PlayerCounter.h  Ship.cpp  Ship.h  ShipRoom.cpp  ShipRoom.h
src/gamelib/: ChatMsg.cpp  ChatMsg.h  Constants.cpp  Constants.h  Packet.cpp  Packet.h  gamelib.cpp  gamelib.h
src/server/: main.cpp  server.cpp  server.h  server_functionality.cpp
(+112 files in other folders)
